examples/test/testpolicy19381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19381
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key22: value11
      key11: value24
      key2: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value6
          key17: value40
      podSelector:
        matchLabels:
          key41: value35
